--- a/pubman/pubman_presentation/src/main/webapp/home/BlogIntegration.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/BlogIntegration.jspf
@@ -49,12 +49,12 @@
     </script>
 
 	<h2>
-		<h:outputText id="rssFeedName" value="#{lbl.Home_Header_News}" escape="false"/>
+		<h:outputText value="#{lbl.Home_Header_News}" escape="false"/>
 	</h2>
 	<div id="feedControl" style="font-size: 0.4em"></div>
 </h:panelGroup>
  
 <h:panelGroup rendered="#{!ApplicationBean.checkSystemTypeProduction}">
-    <h:outputText id="blogDisabled" value="#{lbl.Home_Header_News_Disabled}"/>
+    <h:outputText value="#{lbl.Home_Header_News_Disabled}"/>
 </h:panelGroup>
 
