--- a/pubman/pubman_presentation/src/main/webapp/list/contextList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/list/contextList.jspf
@@ -67,10 +67,10 @@ All rights reserved. Use is subject to license terms.
 		<div class="free_area0 itemBlockContent endline">		
 			<div class="free_area0 endline itemLine firstLine">
 				<b class="xLarge_area0 endline labelLine">
-					<h:outputText id="lblSubmission_lblDescription" value="#{lbl.submission_lblDescription}" /><span class="noDisplay">: </span>
+					<h:outputText value="#{lbl.submission_lblDescription}" /><span class="noDisplay">: </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputText id="txtContextDescription" value="#{context.description}"/>
+					<h:outputText value="#{context.description}"/>
 				</span>
 			</div>
 		</div>
