--- a/pubman/pubman_presentation/src/main/webapp/collaborator/Collaborator.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/collaborator/Collaborator.jspf
@@ -41,7 +41,7 @@
 <%-- Collaborators --%>
 		<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder">
 			<b class="xLarge_area0_p8 endline labelLine clear">
-				<h:outputText id="lblCollaboratorPage_group" value="#{lbl.CollaboratorPage_group}" /><span class="noDisplay"> </span>
+				<h:outputText value="#{lbl.CollaboratorPage_group}" /><span class="noDisplay"> </span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
 				<h:selectOneMenu styleClass="xDouble_select tiny_marginRIncl">
