--- a/pubman/pubman_presentation/src/main/webapp/editItem/LocatorsGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/LocatorsGroup.jspf
@@ -33,7 +33,7 @@
 
 <h:panelGroup layout="block" id="editLocator" styleClass="full_area0 itemBlock"  rendered="#{!(genre.locators_display == 'false' && genre.locators_form_id == 'full-submission' || genre.locators_display == 'false' && genre.locators_form_id == 'all')}">
 	<h3 class="xLarge_area0_p8 endline blockHeader">
-		<h:outputText id="txtLocatorTitle" value="#{genre.locators_label}" converter="GenreLabelConverter"/>
+		<h:outputText value="#{genre.locators_label}" converter="GenreLabelConverter"/>
 	</h3>
 	<span class="seperator"></span>
 	<div class="free_area0 itemBlockContent endline">
@@ -43,7 +43,7 @@
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{(locator.locator == null || locator.locator == '') && locator.index == 0 }" >
 
 				<b class="xLarge_area0_p8 endline labelLine clear">
-					&#160;<h:outputText id="txtAddLocator" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_optional != 'true'}" /><h:outputText value="#{lbl.EditItem_lblLocator}" rendered="#{genre.locators_display != 'false'}"/><span class="noDisplay">: </span>
+					&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_optional != 'true'}" /><h:outputText value="#{lbl.EditItem_lblLocator}" rendered="#{genre.locators_display != 'false'}"/><span class="noDisplay">: </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
 					<h:outputLabel id="lblTitleAddUrl" styleClass="quad_label" value="#{lbl.EditItem_lblURL}" />
@@ -56,7 +56,7 @@
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine" rendered="#{(locator.locator == null || locator.locator == '') && locator.index > 0 }" >
 
 				<b class="xLarge_area0_p8 endline labelLine clear">
-					&#160;<h:outputText id="txtMultiAddLocator" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_optional != 'true'}" /><h:outputText value="#{lbl.EditItem_lblNewLocator}"/><span class="noDisplay">: </span>
+					&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_optional != 'true'}" /><h:outputText value="#{lbl.EditItem_lblNewLocator}"/><span class="noDisplay">: </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
 					<h:outputLabel id="lblMultiTitleAddUrl" styleClass="quad_label" value="#{lbl.EditItem_lblURL}" />
@@ -75,13 +75,13 @@
 						&#160;<span class="noDisplay"> </span>
 					</b>
 					<span class="xHuge_area0 xTiny_marginLExcl endline">
-						<h:outputText id="txtShowLocator" value="#{locator.locator}" />
+						<h:outputText value="#{locator.locator}" />
 					</span>
 				</h:panelGroup>
 				<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{(locator.locator != null && locator.locator != '')}">
 
 					<b class="xLarge_area0_p8 endline labelLine clear">
-						&#160;<h:outputText id="txtLocatorMandatoryField" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_component_content_category_display != 'true'}" /><h:outputText value="#{genre.locators_component_content_category_label}" converter="GenreLabelConverter"/><span class="noDisplay">: </span>
+						&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_component_content_category_display != 'true'}" /><h:outputText value="#{genre.locators_component_content_category_label}" converter="GenreLabelConverter"/><span class="noDisplay">: </span>
 					</b>
 					<span class="double_area0 xTiny_marginLExcl xTiny_marginRIncl">
 						<h:selectOneMenu id="selLocatorContentCategory" styleClass="double_select replace" value="#{locator.file.contentCategory}" >
@@ -94,7 +94,7 @@
 <%-- Locator name--%>
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{(locator.locator != null && locator.locator != '')}">
 				<b class="xLarge_area0_p8 endline labelLine clear">
-					&#160;<h:outputText id="txtTitleLocatorName" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" /><h:outputText value="#{lbl.EditItem_lblFileProperties}" /><span class="noDisplay">: </span>
+					&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" /><h:outputText value="#{lbl.EditItem_lblFileProperties}" /><span class="noDisplay">: </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
 					<h:panelGroup styleClass="xDouble_area0 tiny_marginRIncl" rendered="#{!(genre.locators_component_name_display == 'false' && genre.locators_component_name_form_id == 'full-submission' || genre.locators_component_name_display == 'false' && genre.locators_component_name_form_id == 'all')}">
@@ -108,7 +108,7 @@
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{(locator.locator != null && locator.locator != '') }">
 				<h:panelGroup rendered="#{!(genre.locators_component_description_display == 'false' && genre.locators_component_description_form_id == 'full-submission' || genre.locators_component_description_display == 'false' && genre.locators_component_description_form_id == 'all')}">
 					<b class="xLarge_area0_p8 endline labelLine clear">
-						&#160;<h:outputText id="txtTitleLocatorDescription" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_component_description_optional != 'true'}" /><span class="noDisplay"> </span>
+						&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_component_description_optional != 'true'}" /><span class="noDisplay"> </span>
 					</b>
 					<span class="xHuge_area0 xTiny_marginLExcl endline">
 						<span class="xDouble_area0 tiny_marginRIncl">
@@ -123,7 +123,7 @@
 				</span>
 			</h:panelGroup>
 		</tr:iterator>
-		<a class="free_area0 collapse"><h:outputText id="txtViewItemFull_lblHideGroupLocators" value="#{lbl.ViewItemFull_lblHideGroup} " /> <h:outputText value="#{genre.locators_label}" converter="GenreLabelConverter"/></a>	
+		<a class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} " /> <h:outputText value="#{genre.locators_label}" converter="GenreLabelConverter"/></a>	
 	</div>
-	<a class="free_area0 expand"><h:outputText id="txtViewItemFull_lblShowGroupLocators" value="#{lbl.ViewItemFull_lblShowGroup} " /> <h:outputText value="#{genre.locators_label}" converter="GenreLabelConverter"/></a>
+	<a class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup} " /> <h:outputText value="#{genre.locators_label}" converter="GenreLabelConverter"/></a>
 </h:panelGroup>
