--- a/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
@@ -34,7 +34,7 @@
 <h:panelGroup layout="block" id="editPerson" styleClass="free_area0" rendered="#{!(genre.creator_person_organization_display == 'false' && genre.creator_person_organization_form_id == 'full-submission' || genre.creator_person_organization_display == 'false' && genre.creator_person_organization_form_id == 'all')}">
 	<h:panelGroup layout="block" id="editPersonInner" styleClass="full_area0 itemBlock" rendered="#{!(genre.creator_person_organization_creator_display == 'false' && genre.creator_person_organization_creator_form_id == 'full-submission' || genre.creator_person_organization_creator_display == 'false' && genre.creator_person_organization_creator_form_id == 'all')}">
 		<h3 class="xLarge_area0_p8 endline blockHeader">
-			<h:outputText id="txtcreator_person_organization_label" value="#{genre.creator_person_organization_label}" converter="GenreLabelConverter"/>
+			<h:outputText value="#{genre.creator_person_organization_label}" converter="GenreLabelConverter"/>
 		</h3>
 		<span class="seperator"></span>
 		<div class="free_area0 itemBlockContent endline">
@@ -46,12 +46,12 @@
 						
 				<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder">
 					<b class="xLarge_area0_p8 endline labelLine clear">
-						&#160;<h:outputText id="txtSubmission_lblAuthorCopyPasteLabelRequired" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" />
-						<h:outputText id="txtSubmission_lblAuthorCopyPasteLabel" value="#{lbl.submission_lblAuthorCopyPasteLabel}"/>
+						&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" />
+						<h:outputText value="#{lbl.submission_lblAuthorCopyPasteLabel}"/>
 						<span class="noDisplay">: </span>
 					</b>
 					<span class="xHuge_area0 xTiny_marginLExcl endline">
-						<h:outputText id="lblsubmission_lblAuthorCopyPaste" styleClass="quad_area0" value="#{lbl.submission_lblAuthorCopyPaste}" />
+						<h:outputText styleClass="quad_area0" value="#{lbl.submission_lblAuthorCopyPaste}" />
 						<h:inputTextarea id="inpcreatorParseString" styleClass="xDouble_txtArea tiny_marginRIncl inputTxtArea" value="#{EditItemSessionBean.creatorParseString}" cols="15" rows="3" />
 						<span class="large_checkbox">
 							<h:selectBooleanCheckbox id="chkOverwriteStatus" value="#{EditItemSessionBean.overwriteCreators}" />
@@ -65,13 +65,13 @@
 				<tr:iterator id="iterCopyPasteOrganisationAuthors" var="pasteOrga" value="#{EditItemSessionBean.authorCopyPasteOrganizationsCreatorBean.personOrganisationManager.objectDM}">
 						<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder">
 							<b class="xLarge_area0_p8 endline labelLine clear">
-							&#160;<h:outputText id="txtOrganisationsforAuthorsRequired" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" />
+							&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" />
 								<span class="noDisplay"></span>
 							</b>
 							<span class="xHuge_area0 xTiny_marginLExcl endline">
 								<h:panelGroup styleClass="quad_area0">
-									<h:outputText id="txtOrganization_name_optional" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_organizations_organization_name_optional != 'true'}" />
-									<h:outputText id="txtorganization_name_label" value="#{genre.creator_person_organization_creator_organizations_organization_name_label}" converter="GenreLabelConverter" />
+									<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_organizations_organization_name_optional != 'true'}" />
+									<h:outputText value="#{genre.creator_person_organization_creator_organizations_organization_name_label}" converter="GenreLabelConverter" />
 								</h:panelGroup>
 								<h:inputText id="inpPasteOrgaName" styleClass="quad_txtInput" value="#{pasteOrga.name.value}"/>
 							</span>
@@ -81,7 +81,7 @@
 						</h:panelGroup>
 						<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder">
 							<b class="xLarge_area0_p8 endline labelLine clear">
-							&#160;<h:outputText id="txtorganization_address_optional" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_organizations_organization_address_optional != 'true'}" />
+							&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_organizations_organization_address_optional != 'true'}" />
 								<span class="noDisplay"></span>
 							</b>
 							<span class="xHuge_area0 xTiny_marginLExcl endline">
@@ -103,8 +103,8 @@
 						<h:panelGroup layout="block" rendered="#{!(genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'all')}">
 							<h:panelGroup layout="block" styleClass="free_area0 endline itemLine firstCreator noTopBorder" rendered="#{EditItem.creatorCollection.creatorManager.objectDM.rowIndex == 0 }">
 								<b class="xLarge_area0_p8 endline labelLine clear">
-							&#160;<h:outputText id="txtselect_roles_optionalRequired" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_select_roles_optional != 'true'}" />
-									<h:outputText id="txtcreator_select_roles_label" value="#{genre.creator_person_organization_creator_select_roles_label}" converter="GenreLabelConverter"/>
+							&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_select_roles_optional != 'true'}" />
+									<h:outputText value="#{genre.creator_person_organization_creator_select_roles_label}" converter="GenreLabelConverter"/>
 									<span class="noDisplay">: </span>
 								</b>
 								<span class="xHuge_area0 xTiny_marginLExcl endline">
@@ -118,8 +118,8 @@
 							</h:panelGroup>
 							<h:panelGroup layout="block" styleClass="free_area0 endline itemLine" rendered="#{EditItem.creatorCollection.creatorManager.objectDM.rowIndex > 0 }">
 								<b class="xLarge_area0_p8 endline labelLine clear">
-							&#160;<h:outputText id="txtorganization_creator_select_roles_optionalRequired" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_select_roles_optional != 'true'}" />
-									<h:outputText id="txtcreator_person_organization_creator_select_roles_label" value="#{genre.creator_person_organization_creator_select_roles_label}" converter="GenreLabelConverter"/>
+							&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_select_roles_optional != 'true'}" />
+									<h:outputText value="#{genre.creator_person_organization_creator_select_roles_label}" converter="GenreLabelConverter"/>
 									<span class="noDisplay">: </span>
 								</b>
 								<span class="xHuge_area0 xTiny_marginLExcl endline">
@@ -133,8 +133,8 @@
 										<%-- Creator type --%>
 						<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{!(genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'all')}">
 							<b class="xLarge_area0_p8 endline labelLine clear">
-							&#160;<h:outputText id="txtRoles_creator_type_optionalRequired" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_select_roles_creator_type_optional !='true'}" />
-								<h:outputText id="txtRoles_creator_type_optional" value="#{genre.creator_person_organization_creator_select_roles_creator_type_label}" converter="GenreLabelConverter"/>
+							&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_select_roles_creator_type_optional !='true'}" />
+								<h:outputText value="#{genre.creator_person_organization_creator_select_roles_creator_type_label}" converter="GenreLabelConverter"/>
 								<span class="noDisplay">: </span>
 							</b>
 							<span class="xHuge_area0 xTiny_marginLExcl endline">
@@ -149,7 +149,7 @@
 						<h:panelGroup layout="block" rendered="#{!(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
 							<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{creatorBean.personType}">
 								<b class="xLarge_area0_p8 endline labelLine clear">
-							&#160;<h:outputText id="txtCreatorPersonFamilyRequired" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" />
+							&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" />
 									<span class="noDisplay"></span>
 								</b>
 								<span class="xHuge_area0 xTiny_marginLExcl endline">
@@ -157,8 +157,8 @@
 									<h:panelGroup styleClass="free_area0" rendered="#{!(genre.creator_person_organization_creator_persons_person_family_name_display == 'false' && genre.creator_person_organization_creator_persons_person_family_name_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_person_family_name_display == 'false' && genre.creator_person_organization_creator_persons_person_family_name_form_id == 'all')}">
 										<span class="double_area0 xTiny_marginRIncl">
 											<h:panelGroup styleClass="double_area0">
-												<h:outputText id="txtcreator_persons_person_family_name_optionalRequired" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_persons_person_family_name_optional != 'true'}" />
-												<h:outputText id="txtcreator_persons_person_family_name_optional" value="#{genre.creator_person_organization_creator_persons_person_family_name_label}" converter="GenreLabelConverter"/>
+												<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_persons_person_family_name_optional != 'true'}" />
+												<h:outputText value="#{genre.creator_person_organization_creator_persons_person_family_name_label}" converter="GenreLabelConverter"/>
 											</h:panelGroup>
 											<h:inputText id="inpcreator_persons_person_family_name_optional" styleClass="double_txtInput personSuggest familyName" value="#{creatorBean.creator.person.familyName}" onchange="removeConeId(this)"/>
 										</span>
@@ -166,8 +166,8 @@
 									<h:panelGroup styleClass="free_area0" rendered="#{!(genre.creator_person_organization_creator_persons_person_given_name_display == 'false' && genre.creator_person_organization_creator_persons_person_given_name_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_person_given_name_display == 'false' && genre.creator_person_organization_creator_persons_person_given_name_form_id == 'all')}">
 										<span class="double_area0">
 											<h:panelGroup styleClass="double_area0">
-												<h:outputText id="txtpersons_person_given_name_optionalRequired" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_persons_person_given_name_optional != 'true'}" />
-												<h:outputText id="txtpersons_person_given_name_optional" value="#{genre.creator_person_organization_creator_persons_person_given_name_label}" converter="GenreLabelConverter"/>
+												<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_persons_person_given_name_optional != 'true'}" />
+												<h:outputText value="#{genre.creator_person_organization_creator_persons_person_given_name_label}" converter="GenreLabelConverter"/>
 											</h:panelGroup>
 											<h:inputText id="inppersons_person_given_name_optional" styleClass="double_txtInput givenName" value="#{creatorBean.creator.person.givenName}" onchange="removeConeId(this)"/>
 										</span>
@@ -183,13 +183,13 @@
 							<tr:iterator id="iterCreatorPersonAffiliation" var="persOrga" value="#{creatorBean.personOrganisationManager.objectDM}" rendered="#{creatorBean.personType}">
 									<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{!(genre.creator_person_organization_creator_organizations_organization_name_display == 'false' && genre.creator_person_organization_creator_organizations_organization_name_form_id == 'full-submission' || genre.creator_person_organization_creator_organizations_organization_name_display == 'false' && genre.creator_person_organization_creator_organizations_organization_name_form_id == 'all')}">
 										<b class="xLarge_area0_p8 endline labelLine clear">
-								&#160;<h:outputText id="txtTitleCreatorPersonAffiliationRequired" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" />
+								&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" />
 											<span class="noDisplay"></span>
 										</b>
 										<span class="xHuge_area0 xTiny_marginLExcl endline">
 											<h:panelGroup styleClass="quad_area0">
-												<h:outputText id="txtorganizations_organization_name_optionalRequired" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_organizations_organization_name_optional != 'true'}" />
-												<h:outputText id="txtorganizations_organization_name_optional" value="#{genre.creator_person_organization_creator_organizations_organization_name_label}" converter="GenreLabelConverter" />
+												<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_organizations_organization_name_optional != 'true'}" />
+												<h:outputText value="#{genre.creator_person_organization_creator_organizations_organization_name_label}" converter="GenreLabelConverter" />
 											</h:panelGroup>
 											<h:inputText id="inporganizations_organization_name_optional" styleClass="quad_txtInput orgName" value="#{persOrga.name.value}"/>
 											<h:inputText id="inporganizations_organization_name_optionalIdentifier" styleClass="noDisplay orgIdentifier" value="#{persOrga.identifier}"/>
@@ -222,8 +222,8 @@
 								<h:panelGroup layout="block" rendered="#{!(genre.creator_person_organization_creator_organizations_organization_name_display == 'false' && genre.creator_person_organization_creator_organizations_organization_name_form_id == 'full-submission' || genre.creator_person_organization_creator_organizations_organization_name_display == 'false' && genre.creator_person_organization_creator_organizations_organization_name_form_id == 'all')}">
 									<span class="xHuge_area0 xTiny_marginLExcl endline">
 										<h:panelGroup styleClass="quad_area0">
-											<h:outputText id="txtcreator_organizations_organization_name_optionalRequired" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_organizations_organization_name_optional != 'true'}" />
-											<h:outputText id="txtcreator_organizations_organization_name_optional" value="#{genre.creator_person_organization_creator_organizations_organization_name_label}" converter="GenreLabelConverter" />
+											<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_organizations_organization_name_optional != 'true'}" />
+											<h:outputText value="#{genre.creator_person_organization_creator_organizations_organization_name_label}" converter="GenreLabelConverter" />
 										</h:panelGroup>
 										<h:inputText id="inpcreator_organizations_organization_name_optional" styleClass="quad_txtInput" value="#{creatorBean.creator.organization.name.value}"/>
 									</span>
@@ -235,7 +235,7 @@
 							<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{creatorBean.organisationType}">
 								<h:panelGroup layout="block" rendered="#{!(genre.creator_person_organization_creator_organizations_organization_address_display == 'false' && genre.creator_person_organization_creator_organizations_organization_address_form_id == 'full-submission' || genre.creator_person_organization_creator_organizations_organization_address_display == 'false' && genre.creator_person_organization_creator_organizations_organization_address_form_id == 'all')}">
 									<b class="xLarge_area0_p8 endline labelLine clear">
-								&#160;<h:outputText id="txtCreator_organizations_organization_address_optional" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_organizations_organization_address_optional != 'true'}" />
+								&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.creator_person_organization_creator_organizations_organization_address_optional != 'true'}" />
 										<span class="noDisplay"></span>
 									</b>
 									<span class="xHuge_area0 xTiny_marginLExcl endline">
