--- a/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
@@ -33,7 +33,7 @@
 
 <h:panelGroup layout="block" styleClass="full_area0 itemBlock" rendered="#{!ViewItemFull.isStateWithdrawn}">
 	<h3 class="xLarge_area0_p8 endline blockHeader">
-		<h:outputText id="lblViewItemFull_lblBasic" value="#{lbl.ViewItemFull_lblBasic}" />
+		<h:outputText value="#{lbl.ViewItemFull_lblBasic}" />
 	</h3>
 	<span class="seperator"></span>
 	<h:panelGroup styleClass="free_area0 itemBlockContent endline">
@@ -75,10 +75,10 @@
 <%-- Genre --%>
 		<div class="free_area0 endline itemLine">
 			<b class="xLarge_area0_p8 endline labelLine clear">
-				<h:outputText id="lblViewItemFull_lblGenre" value="#{lbl.ViewItemFull_lblGenre}" /><span class="noDisplay">: </span>
+				<h:outputText value="#{lbl.ViewItemFull_lblGenre}" /><span class="noDisplay">: </span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputText id="txtGenre" value="#{ViewItemFull.genre}" />
+				<h:outputText value="#{ViewItemFull.genre}" />
 			</span>
 		</div>
 
@@ -86,11 +86,11 @@
 		<tr:iterator var="altTitle" value="#{ViewItemFull.pubItem.metadata.alternativeTitles}" binding="#{ViewItemFull.titleIterator}" varStatus="index">
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine">
 				<b class="xLarge_area0_p8 endline labelLine clear">
-					<h:outputText id="lblViewItemFull_lblAlternativeTitle" value="#{lbl.ViewItemFull_lblAlternativeTitle}"/><span class="noDisplay">: </span>
+					<h:outputText value="#{lbl.ViewItemFull_lblAlternativeTitle}"/><span class="noDisplay">: </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputText id="txtAlternativeTitle" value="#{altTitle.value}" rendered="#{altTitle.value != ''}"/>
-					<h:outputText id="txtAlternativeTitleEmpty" value="&#160;" rendered="#{altTitle.value == ''}" escape="false"/>
+					<h:outputText value="#{altTitle.value}" rendered="#{altTitle.value != ''}"/>
+					<h:outputText value="&#160;" rendered="#{altTitle.value == ''}" escape="false"/>
 				</span>
 			</h:panelGroup>
 		</tr:iterator>	
